Cherry-pick 283908@main (925ebc7f5e3e). https://bugs.webkit.org/show_bug.cgi?id=279957

[GTK][WPE][Skia] CPU rendering: DisplayList destructed on wrong thread
    https://bugs.webkit.org/show_bug.cgi?id=279957

    Reviewed by Miguel Gomez.

    Do not destruct the DisplayList, previously recorded on the main thread,
    in the worker thread, but also on the main thread.

    Covered by existing tests.

    * Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayerSkia.cpp:
    (WebCore::CoordinatedGraphicsLayer::paintTile):

    Canonical link: https://commits.webkit.org/283908@main

Canonical link: https://commits.webkit.org/282416.110@webkitglib/2.46